fixed scale on small screen

--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -63,13 +63,22 @@ header
 .bio-box p 
     padding: 20px;
 
-@media screen and (max-width: 568px)
+
+@media screen and (max-width: 900px)
     .col-1 img
-        margin: 8% 8% 1% 50% ;
-    .col-1, .col-2
-        width: 35%;
-        display: block;
+        width: 140%;
+        margin: 8% 8% 1% 75% ;
     .box
         display: block;
+        margin: 10px 0 0 30%;
+        width: 35vh;
+@media screen and (max-width: 568px)
+    .col-1 img
+        width: 200%;
+        margin: 0 0 0 100%;
+    .col-1, .col-2
+        margin: 0 10% 1% 10%;
+        display: block;
+    .box
         margin: 10px 0 0 30%;
         width: 35vh;
